# sprout

./: .gitignore  Cargo.toml  README.md  SESSION.md  llm.txt  task.md  user-scripting.md
.github/workflows/: rust.yml
behavior-test/: test_symlinks.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_manifest.rs
src/: ast.rs  cli.rs  cli_tests.rs  main.rs  manifest.rs  symlink_tests.rs  tests.rs
src/core/: deps.rs  mod.rs  symlinks.rs
src/lockfile/: mod.rs  test_lockfile.rs
src/parser/: fuzz_tests.rs  mod.rs  parser.rs  snapshot_parser_tests.rs  sprout.pest  test_parser.rs
src/snapshots/: sprout__cli_tests__tests__add_archive_dependency.snap  sprout__cli_tests__tests__add_auto_dependency_archive.snap  sprout__cli_tests__tests__add_auto_dependency_git.snap  sprout__cli_tests__tests__add_git_dependency.snap  sprout__cli_tests__tests__add_git_with_commit.snap  sprout__cli_tests__tests__add_git_with_custom_name.snap  sprout__cli_tests__tests__add_local_dependency.snap  sprout__cli_tests__tests__add_multiple_dependencies.snap  sprout__cli_tests__tests__init_creates_empty_manifest.snap  sprout__cli_tests__tests__manifest_with_git_dependency.snap  sprout__symlink_tests__tests__add_recursive_directory.snap  sprout__symlink_tests__tests__add_single_file.snap  sprout__symlink_tests__tests__dry_run_mode.snap
src/templates/: default_manifest.sprout
tree-sitter-sprout/: Cargo.toml  binding.gyp  grammar.js  package.json
tree-sitter-sprout/queries/: highlights.scm  injections.scm
