[package]
name = "sprout-cli"
version = "0.1.0"
edition = "2024"
authors = ["Patrick Wieschollek <mail@patwie.com>"]
description = "A symlink and source dependency manager that just works"
repository = "https://github.com/patwie/sprout"
homepage = "https://github.com/patwie/sprout"
license = "Apache-2.0"
keywords = ["dotfiles", "symlink", "dependency-manager", "build-tool"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "sprout"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dirs = "6.0.0"
hex = "0.4.3"
ignore = "0.4.23"
reqwest = { version = "0.12.20", features = ["blocking", "rustls-tls"], default-features = false }
toml = "0.8.23"
tar = "0.4.44"
flate2 = "1.1.2"
zip = { version = "4.2.0", default-features = false, features = ["aes-crypto", "bzip2", "deflate", "deflate64", "time","zstd"] }
tracing = "0.1.41"
dialoguer = "0.11"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xz = "0.1.0"
serde_yaml = "0.9.34"
regex = "1.11.1"
text_trees = "0.1.2"
colored = "2.1.0"
pest = "2.8.1"
pest_derive = "2.8.1"
tempfile = "3.20.0"
indicatif = "0.18.0"
atty = "0.2.14"
chrono = { version = "0.4.42", features = ["serde"] }
tabled = "0.12.2"
aws-config = "1.8.12"
aws-sdk-bedrockruntime = "1.121.0"
tokio = { version = "1.49.0", features = ["full"] }
lzma-rs = "0.3.0"

[dev-dependencies]
cargo-fuzz = "0.13.1"
insta = "1.43.1"

